--- a/Use_git_under_2_scenarios.ipynb
+++ b/Use_git_under_2_scenarios.ipynb
@@ -415,7 +415,7 @@
    "outputs": [],
    "source": [
     "git remote -v\n",
-    "git branch -a "
+    "git branch -a"
    ]
   },
   {
@@ -423,21 +423,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "origin  git@github.com:aukuno/testGit.git (fetch)\n",
+    "origin  git@github.com:aukuno/testGit.git (push)\n",
+    "\n",
+    "    \n",
+    "* master\n",
+    "  remotes/origin/HEAD -> origin/master\n",
+    "  remotes/origin/master\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PUSHING CHANGES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we need to commit changes like we did previously, then we push:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# commit changes locally\n",
+    "git diff\n",
+    "git status\n",
+    "git add -A\n",
+    "git commit -m \"delete test.txt\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# push\n",
+    "git pull origin master \n",
+    "git push origin master"
+   ]
   },
   {
    "cell_type": "code",
