--- a/Use_git_under_2_scenarios.ipynb
+++ b/Use_git_under_2_scenarios.ipynb
@@ -457,7 +457,27 @@
     "git diff\n",
     "git status\n",
     "git add -A\n",
-    "git commit -m \"delete test.txt\""
+    "git commit -m \"delete 4test.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Output\n",
+    "On branch master\n",
+    "Your branch is ahead of 'origin/master' by 1 commit.\n",
+    "  (use \"git push\" to publish your local commits)\n",
+    "Changes not staged for commit:\n",
+    "  (use \"git add/rm <file>...\" to update what will be committed)\n",
+    "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+    "\n",
+    "        deleted:    4test.txt\n",
+    "        modified:   Use_git_under_2_scenarios.ipynb\n",
+    "\n",
+    "no changes added to commit (use \"git add\" and/or \"git commit -a\")"
    ]
   },
   {
@@ -476,7 +496,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Output\n",
+    "$ git pull origin master\n",
+    "Enter passphrase for key '/c/Users/Aukuno/.ssh/id_rsa':\n",
+    "From github.com:aukuno/testGit\n",
+    " * branch            master     -> FETCH_HEAD\n",
+    "Already up-to-date.\n",
+    "\n",
+    "$ git push origin master\n",
+    "Enter passphrase for key '/c/Users/Aukuno/.ssh/id_rsa':\n",
+    "Counting objects: 9, done.\n",
+    "Delta compression using up to 4 threads.\n",
+    "Compressing objects: 100% (8/8), done.\n",
+    "Writing objects: 100% (9/9), 166.45 KiB | 0 bytes/s, done.\n",
+    "Total 9 (delta 2), reused 0 (delta 0)\n",
+    "remote: Resolving deltas: 100% (2/2), done.\n",
+    "To github.com:aukuno/testGit.git\n",
+    "   e601bba..de26688  master -> master"
+   ]
   },
   {
    "cell_type": "code",
