ready for gir branch switch

--- a/Use_git_under_2_scenarios.ipynb
+++ b/Use_git_under_2_scenarios.ipynb
@@ -529,7 +529,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git branch newBranch"
+    "git branch newBranch\n",
+    "git chechkout newBranch"
    ]
   }
  ],
