--- a/Use_git_under_2_scenarios.ipynb
+++ b/Use_git_under_2_scenarios.ipynb
@@ -339,21 +339,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "git push -u origin master"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Output\n",
+    "Enter passphrase for key '/c/Users/Aukuno/.ssh/id_rsa':\n",
+    "Counting objects: 3, done.\n",
+    "Delta compression using up to 4 threads.\n",
+    "Compressing objects: 100% (3/3), done.\n",
+    "Writing objects: 100% (3/3), 539 bytes | 0 bytes/s, done.\n",
+    "Total 3 (delta 2), reused 0 (delta 0)\n",
+    "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\n",
+    "To github.com:aukuno/testGit.git\n",
+    "   30235bd..e29273d  master -> master\n",
+    "Branch master set up to track remote branch master from origin."
+   ]
   },
   {
    "cell_type": "markdown",
