--- a/Use_git_under_2_scenarios.ipynb
+++ b/Use_git_under_2_scenarios.ipynb
@@ -524,6 +524,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "切换branch——>修改文件——>添加修改——>确认修改——>push到远程branch（此时远程branch会自动生成branch以追踪本地branch[名字相同]）"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -546,7 +553,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git push "
+    "git push -u origin newBranch\n",
+    "git branch -a"
    ]
   },
   {
@@ -554,14 +562,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Output\n",
+    "$ git push -u origin newBranch\n",
+    "Enter passphrase for key '/c/Users/Aukuno/.ssh/id_rsa':\n",
+    "Everything up-to-date\n",
+    "Branch newBranch set up to track remote branch newBranch from origin.\n",
+    "\n",
+    "\n",
+    "$ git branch -a\n",
+    "  0-a\n",
+    "  master\n",
+    "* newBranch\n",
+    "  remotes/origin/HEAD -> origin/master\n",
+    "  remotes/origin/master\n",
+    "  remotes/origin/newBranch"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## MERGE A BRANCH TO THE \"MASTER\" BRANCH"
+   ]
   },
   {
    "cell_type": "code",
