The Completed Version of Git Tutorial

--- a/Config Git.ipynb
+++ b/Config Git.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Git setup after git is installed on windows"
+    "# GIT SETUP AFTER GIT IS INSTALLED ON WINDOWS"
    ]
   },
   {
