--- a/Two Common Scenarios Using Git.ipynb
+++ b/Two Common Scenarios Using Git.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Scenario 1: INITIALIZE A REPOSITORY FROM EXSTING COEE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "If we have an existing project in our computer and we want the project to be tracked. We can follow these steps to initialize our local repo and push them to github.com"
    ]
   },
   {
@@ -52,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.ADD FILES "
+    "## Step 1. ADD FILES "
    ]
   },
   {
@@ -102,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### IGNORE FILE THAT WE DON'T WANT PEOPLE TO SEE"
+    "## Step 2. IGNORE FILES THAT WE DON'T WANT PEOPLE TO SEE"
    ]
   },
   {
@@ -166,7 +181,7 @@
    "source": [
     "Bellow is a map of how git works. After we use \n",
     "```git init```\n",
-    "in our local repo, we are now in the working directory. We've still not add anything to be staged yet, but our code are now under tracking already."
+    "in our local repo, we are now in the working directory. We've add nothing to be staged yet, but our code are now under tracking already."
    ]
   },
   {
@@ -185,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ADD FILE TO STAGING AREA"
+    "## Step 3. ADD FILE TO STAGING AREA"
    ]
   },
   {
@@ -237,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### REMOVE FILES FROM STAGING AREA"
+    "## REMOVE FILES FROM STAGING AREA"
    ]
   },
   {
@@ -277,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COMMIT FILES "
+    "## Step 4. COMMIT FILES "
    ]
   },
   {
@@ -331,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PUSH FILES "
+    "## Step 5. PUSH FILES "
    ]
   },
   {
@@ -367,6 +382,13 @@
    "metadata": {},
    "source": [
     "# Scenario 2: CLONE A REMOTE REPO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use ```git clone```to clone a remote repo from github. We can specify the name and location of the cloned repo"
    ]
   },
   {
@@ -412,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VIEWING INFORMATION ABOUT REMOTE THE REMOTE REPOSITORY"
+    "## VIEWING INFORMATION ABOUT REMOTE REPOSITORY"
    ]
   },
   {
@@ -422,7 +444,16 @@
    "outputs": [],
    "source": [
     "git remote -v\n",
+    "\n",
+    "# list all the branch of the repo, no matter local or remote \n",
     "git branch -a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output:"
    ]
   },
   {
@@ -468,14 +499,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Output\n",
     "On branch master\n",
-    "Your branch is ahead of 'origin/master' by 1 commit.\n",
+    "Your branOutputch is ahead of 'origin/master' by 1 commit.\n",
     "  (use \"git push\" to publish your local commits)\n",
     "Changes not staged for commit:\n",
     "  (use \"git add/rm <file>...\" to update what will be committed)\n",
@@ -485,6 +522,13 @@
     "        modified:   Use_git_under_2_scenarios.ipynb\n",
     "\n",
     "no changes added to commit (use \"git add\" and/or \"git commit -a\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After we commit, all the modification is written to the local repo. Then, we should pull from remote repo beacause there may be modifications done by other developers on the remote branch."
    ]
   },
   {
@@ -499,12 +543,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Output\n",
     "$ git pull origin master\n",
     "Enter passphrase for key '/c/Users/Aukuno/.ssh/id_rsa':\n",
     "From github.com:aukuno/testGit\n",
@@ -544,7 +594,12 @@
    "outputs": [],
    "source": [
     "git branch newBranch\n",
-    "git chechkout newBranch"
+    "git chechkout newBranch\n",
+    "\n",
+    "\n",
+    "# 我们可以把这个生成分支的过程看成是在本地仓库里操作的，切换也只是在本地上切换，\n",
+    "# 只有到了最后将所有修改commit到本地仓库后，在push到远程仓库时，\n",
+    "# 远程仓库才会生成newBranch这个分支"
    ]
   },
   {
@@ -565,12 +620,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Output\n",
     "$ git push -u origin newBranch\n",
     "Enter passphrase for key '/c/Users/Aukuno/.ssh/id_rsa':\n",
     "Everything up-to-date\n",
@@ -598,17 +659,134 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "git checkout master\n",
+    "\n",
+    "# pull the latest version of master\n",
+    "git pull origin master\n",
+    "\n",
+    "# show the merged branches on the local repo\n",
+    "git branch --merged\n",
+    "\n",
+    "# merge branch newBranch\n",
+    "git merge newBranch\n",
+    "\n",
+    "# update the remote master branch\n",
+    "git push origin master"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "$ git checkout master\n",
+    "Switched to branch 'master'\n",
+    "Your branch is up-to-date with 'origin/master'.\n",
+    "\n",
+    "Aukuno@Foxrail MINGW64 /e/OneDrive/_GitRepo/testGit (master)\n",
+    "$ git pull origin master\n",
+    "Enter passphrase for key '/c/Users/Aukuno/.ssh/id_rsa':\n",
+    "From github.com:aukuno/testGit\n",
+    " * branch            master     -> FETCH_HEAD\n",
+    "Already up-to-date.\n",
+    "\n",
+    "Aukuno@Foxrail MINGW64 /e/OneDrive/_GitRepo/testGit (master)\n",
+    "$ git branch --merged\n",
+    "  0-a\n",
+    "* master\n",
+    "\n",
+    "Aukuno@Foxrail MINGW64 /e/OneDrive/_GitRepo/testGit (master)\n",
+    "$ git merge newBranch\n",
+    "Auto-merging Use_git_under_2_scenarios.ipynb\n",
+    "Merge made by the 'recursive' strategy.\n",
+    " Use_git_under_2_scenarios.ipynb | 25 ++++++++++++++++---------\n",
+    " 1 file changed, 16 insertions(+), 9 deletions(-)\n",
+    "\n",
+    "Aukuno@Foxrail MINGW64 /e/OneDrive/_GitRepo/testGit (master)\n",
+    "$ git push origin master\n",
+    "Enter passphrase for key '/c/Users/Aukuno/.ssh/id_rsa':\n",
+    "Counting objects: 3, done.\n",
+    "Delta compression using up to 4 threads.\n",
+    "Compressing objects: 100% (3/3), done.\n",
+    "Writing objects: 100% (3/3), 538 bytes | 0 bytes/s, done.\n",
+    "Total 3 (delta 2), reused 0 (delta 0)\n",
+    "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\n",
+    "To github.com:aukuno/testGit.git\n",
+    "   ef2b944..831496c  master -> master"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can use ```git branch -a``` again to solidate that the merge is successful. After the merge and push is completed, branch ```newBranch``` is no more needed, so we need to delete them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$ git branch -a\n",
+    "  0-a\n",
+    "* master\n",
+    "  newBranch\n",
+    "  remotes/origin/HEAD -> origin/master\n",
+    "  remotes/origin/master\n",
+    "  remotes/origin/newBranch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DELETE A BRANCH LOCALLY AND REMOTELLY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete local repo\n",
+    "git branch -d newBranch\n",
+    "\n",
+    "# delete remote repo\n",
+    "git push origin --delete newBranch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Enter passphrase for key '/c/Users/Aukuno/.ssh/id_rsa':\n",
+    "To github.com:aukuno/testGit.git\n",
+    " - [deleted]         newBranch"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
