--- a/Config Git.ipynb
+++ b/Config Git.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.SET CONFIG VALUES"
+    "## 1.Set config values"
    ]
   },
   {
