Update Two Common Scenarios Using Git.ipynb

--- a/Two Common Scenarios Using Git.ipynb
+++ b/Two Common Scenarios Using Git.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Scenario 1: INITIALIZE A REPOSITORY FROM EXSTING COEE"
+    "# Scenario 1: INITIALIZE A REPOSITORY FROM EXSTING CODE"
    ]
   },
   {
