--- a/Two Common Scenarios Using Git.ipynb
+++ b/Two Common Scenarios Using Git.ipynb
@@ -346,6 +346,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "After adding all the file to the local repo, you should `create` a repo on guthub.com. Then you shall use \n",
+    "```\n",
+    "git remote add origin git@github.com:XiaohuiLee/myPyProj.git\n",
+    "```\n",
+    "to add the remote repo to be 'mirrored' as `origin` in your PC."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 5. PUSH FILES "
    ]
   },
@@ -786,7 +797,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
